syntax = "proto3";

import "Project.proto";
import "Employee.proto";
import "Group.proto";


package com.bht.pim.proto.projects;
option java_generic_services = true;
option java_multiple_files = true;

message ProjectInfo {
    Project project = 1;
    repeated employees.Employee employees = 2;
}

message ProjectId {
    int64 id = 1;
}

message Success {
    bool isSuccess = 1;
}

service ProjectService {
    rpc getProjectById (ProjectId) returns (ProjectInfo);
    rpc addNewProject (ProjectInfo) returns (Success);
    rpc editProject (ProjectInfo) returns (Success);
    rpc deleteProject (ProjectId) returns (Success);
}